# votabien-peru-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/config/: database.py  logging_config.py  security.py  settings.py
app/models/: __init__.py  auth.py  politics.py
app/responses/: auth.py  politics.py
app/routes/: api.py  auth.py  politics.py
app/schemas/: auth.py  politics.py
app/services/: auth.py  email.py  politics.py
app/utils/: cookies.py  string.py
database/: seed.sql
migrations/: env.py
migrations/versions/: 620ff9f7e644_fix_json_field.py  649b87cb5091_init_table.py  733f915d9aec_experiencia_laboral.py  a1a6f61191b9_add_ant_edu_fields.py  ecce50cee972_move_hoja_vida_url.py  f8e24e4d27da_add_partidopoli_fields.py
